style: fix menu on mobile devices

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,7 +6,6 @@
 /*
 * uno style overrides
 */
-
 .user-image {
     width: 150px;
     height: 150px;
@@ -19,4 +18,13 @@
 }
 .navigation .navigation__item:last-child {
     margin-right: 0;
+}
+
+/*
+* Responsive styles
+*/
+@media all and (max-width: 960px) {
+    .cover-navigation--primary .navigation .navigation__item {
+        width: 30%;
+    }
 }
